--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 beautifulsoup4==4.11.1
-dash==2.9.2
-Flask_Caching==2.3.0
-numpy==1.23.0
+dash==2.18.1
+Flask_Caching
+numpy==1.23.2
 pandas==1.5.3
-plotly==5.20.0
+plotly==5.24.1
 Requests==2.32.3
 streamlit==1.39.0
+
+# beautifulsoup4==4.11.1
+# dash==2.18.1
+# Flask_Caching
+# numpy==1.26.4
+# pandas==2.2.2
+# plotly==5.24.1
+# Requests==2.32.3
+# streamlit==1.39.0
